# ckanext-twdh_reports

./: LICENSE  MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/twdh_reports/: blueprint.py  plugin.py
ckanext/twdh_reports/assets/: script.js  twdh_reports.js  webassets.yml
ckanext/twdh_reports/collections/: user_collection.py
ckanext/twdh_reports/templates/: page.html
ckanext/twdh_reports/templates/admin/: base.html
ckanext/twdh_reports/templates/reports/: reports.html  user_collection.html
ckanext/twdh_reports/tests/: test_plugin.py
