[metadata]
name = ckanext-twdh_reports
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tino097/ckanext-twdh_reports
author = Konstantin Sivakov
author_email = konstantin@dathere.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             twdh_reports = ckanext.twdh_reports.plugin:TwdhReportsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/twdh_reports/i18n/ckanext-twdh_reports.pot
width = 80

[init_catalog]
domain = ckanext-twdh_reports
input_file = ckanext/twdh_reports/i18n/ckanext-twdh_reports.pot
output_dir = ckanext/twdh_reports/i18n

[update_catalog]
domain = ckanext-twdh_reports
input_file = ckanext/twdh_reports/i18n/ckanext-twdh_reports.pot
output_dir = ckanext/twdh_reports/i18n
previous = true

[compile_catalog]
domain = ckanext-twdh_reports
directory = ckanext/twdh_reports/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
